fix: add route configuration for /ordenar

--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,12 @@
       "permanent": true
     }
   ],
+  "routes": [
+    {
+      "src": "/ordenar",
+      "dest": "/ordenar"
+    }
+  ],
   "headers": [
     {
       "source": "/(.*)",
