chore: update vercel routing configuration

--- a/vercel.json
+++ b/vercel.json
@@ -9,12 +9,18 @@
       "source": "http://tacosborabora.com",
       "destination": "https://www.tacosborabora.com",
       "permanent": true
+    },
+    {
+      "source": "/ordenar",
+      "destination": "/ordenar",
+      "permanent": false
     }
   ],
   "routes": [
     {
       "src": "/ordenar",
-      "dest": "/ordenar"
+      "dest": "/ordenar",
+      "continue": true
     }
   ],
   "headers": [
