fix: revert to Link component and update Vercel routing

--- a/vercel.json
+++ b/vercel.json
@@ -21,6 +21,10 @@
       "src": "/ordenar",
       "dest": "/ordenar",
       "continue": true
+    },
+    {
+      "src": "/ordenar/(.*)",
+      "dest": "/ordenar"
     }
   ],
   "headers": [
