fix: update domain and routing configurations

--- a/vercel.json
+++ b/vercel.json
@@ -9,6 +9,11 @@
       "source": "http://tacosborabora.com",
       "destination": "https://www.tacosborabora.com",
       "permanent": true
+    },
+    {
+      "source": "/ordenar",
+      "destination": "/ordenar",
+      "permanent": false
     }
   ],
   "routes": [
