--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/next-auth": "^3.13.0",
+    "firebase": "^11.7.1",
     "framer-motion": "^12.11.0",
     "next": "^13.4.19",
+    "next-auth": "^4.24.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
