--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@types/next-auth": "^3.13.0",
     "framer-motion": "^12.11.0",
     "next": "^15.3.2",
