--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@heroicons/react": "^2.2.0",
+    "@heroicons/react": "^2.0.18",
+    "@heroicons/react/24/outline": "^2.0.18",
     "@types/next-auth": "^3.13.0",
-    "framer-motion": "^12.11.0",
-    "next": "^15.3.2",
+    "framer-motion": "^10.17.0",
+    "next": "^14.0.4",
     "next-auth": "^4.24.11",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2"
   },
   "devDependencies": {
@@ -30,8 +31,8 @@
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.29",
-    "qrcode-terminal": "^0.12.0",
     "tailwindcss": "^3.3.3",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.2.2"
   }
 }
