Fix: Configuración de caché y npm para Vercel
- Agregar configuración más estricta en .vercelignore
- Añadir configuración de npm para forzar limpieza completa
- Evitar caché de dependencias problemáticas

--- a/.npmrc
+++ b/.npmrc
@@ -3,3 +3,25 @@ engine-strict=true
 legacy-peer-deps=true
 package-lock=false
 shrinkwrap=false
+prefer-offline=true
+prefer-online=false
+offline=true
+force=true
+ignore-scripts=false
+ignore-scripts=true
+ignore-scripts=false
+ignore-scripts=true
+ignore-scripts=false
+ignore-scripts=true
+ignore-scripts=false
+ignore-scripts=true
+ignore-scripts=false
+ignore-scripts=true
+ignore-scripts=false
+ignore-scripts=true
+ignore-scripts=false
+ignore-scripts=true
+ignore-scripts=false
+ignore-scripts=true
+ignore-scripts=false
+ignore-scripts=true
