Fix: Configuración de npm para Vercel
- Deshabilitar modo offline de npm
- Permitir descarga de dependencias desde internet
- Mantener force mode para limpieza de caché

--- a/.npmrc
+++ b/.npmrc
@@ -3,25 +3,10 @@ engine-strict=true
 legacy-peer-deps=true
 package-lock=false
 shrinkwrap=false
-prefer-offline=true
-prefer-online=false
-offline=true
+prefer-offline=false
+prefer-online=true
+offline=false
 force=true
 ignore-scripts=false
-ignore-scripts=true
-ignore-scripts=false
-ignore-scripts=true
-ignore-scripts=false
-ignore-scripts=true
-ignore-scripts=false
-ignore-scripts=true
-ignore-scripts=false
-ignore-scripts=true
-ignore-scripts=false
-ignore-scripts=true
-ignore-scripts=false
-ignore-scripts=true
-ignore-scripts=false
-ignore-scripts=true
 ignore-scripts=false
 ignore-scripts=true
