--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@heroicons/react": "^2.0.18",
-    "@heroicons/react/24/outline": "^2.0.18",
+    "@heroicons/react": "^2.1.1",
+    "@heroicons/react/24/outline": "^2.1.1",
+    "@heroicons/react/24/solid": "^2.1.1",
     "@types/next-auth": "^3.13.0",
     "framer-motion": "^10.17.0",
     "next": "^14.0.4",
@@ -33,6 +34,7 @@
     "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.7",
+    "critters": "^1.1.0",
     "typescript": "^5.2.2"
   }
 }
