--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@heroicons/react": "^2.1.1",
-    "@heroicons/react/24/outline": "^2.1.1",
-    "@heroicons/react/24/solid": "^2.1.1",
+    "@heroicons/react": "^2.0.18",
     "@types/next-auth": "^3.13.0",
     "framer-motion": "^10.17.0",
     "next": "^14.0.4",
@@ -30,11 +28,12 @@
     "@types/node": "^20.5.7",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "@types/heroicons__react": "^2.0.18",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "critters": "^1.1.0",
+
     "typescript": "^5.2.2"
   }
 }
