--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "description": "",
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@heroicons/react/24": "^2.0.18",
     "@types/next-auth": "^3.13.0",
     "framer-motion": "^10.17.0",
     "next": "^14.0.4",
