--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@heroicons/react": "^2.0.18",
+    "@heroicons/react": "2.0.18",
     "@types/next-auth": "^3.13.0",
     "framer-motion": "^10.17.0",
     "next": "^14.0.4",
