--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "next-auth": "^4.24.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.5.2"
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@types/node": "^20.5.7",
@@ -32,7 +33,6 @@
     "postcss": "^8.4.29",
     "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.7",
-
     "typescript": "^5.2.2"
   }
 }
