--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@auth/prisma-adapter": "^2.9.1",
     "@heroicons/react": "2.0.18",
+    "@prisma/client": "^6.8.2",
     "@types/next-auth": "^3.13.0",
+    "cookies-next": "^5.1.0",
     "framer-motion": "^10.17.0",
     "next": "^14.0.4",
     "next-auth": "^4.24.11",
