feat: Mejoras en UI y configuración de Vercel
- Centrado del logo en el navbar
- Ajuste de posicionamiento del menú hamburguesa
- Mejoras en el modal de registro y login
- Optimización de la configuración de Vercel
- Ajustes en los estilos oscuros de los modales

--- a/vercel.json
+++ b/vercel.json
@@ -8,5 +8,23 @@
   ],
   "env": {
     "NODE_VERSION": "18"
-  }
+  },
+  "builds": [
+    {
+      "src": "next.config.js",
+      "use": "@vercel/next"
+    }
+  ],
+  "functions": {
+    "api/**": {
+      "memory": 1024,
+      "maxDuration": 10
+    }
+  },
+  "rewrites": [
+    {
+      "source": "/api/:path*",
+      "destination": "/api/:path*"
+    }
+  ]
 }
