fix: Actualizar nombres y iconos del menú
- Cambiar nombre de 'Campechano' a 'Campechano de Res'
- Agregar iconos a los extras (Queso, Consomé y Consomé 1 litro)
- Mejorar manejo de errores de imágenes en MenuSection

--- a/package.json
+++ b/package.json
@@ -16,17 +16,23 @@
   "description": "",
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.1",
+    "@googlemaps/extended-component-library": "^0.6.13",
     "@heroicons/react": "2.0.18",
     "@prisma/client": "^6.8.2",
+    "@react-google-maps/api": "^2.20.6",
+    "@types/google.maps": "^3.58.1",
     "@types/next-auth": "^3.13.0",
+    "@types/react-toastify": "^4.0.2",
     "cookies-next": "^5.1.0",
     "framer-motion": "^10.17.0",
+    "lucide-react": "^0.511.0",
     "next": "^14.0.4",
     "next-auth": "^4.24.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.5.2",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@types/node": "^20.5.7",
